force-app/force-app/force-app/main/default/objects/Order/fields/Total_Price_With_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_With_Discount__c</fullName>
    <label>Total Price With Discount</label>
    <summarizedField>OrderItem.Taxable_Value__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>