force-app/force-app/force-app/main/default/objects/Order/fields/Total_Price_With_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_With_Tax__c</fullName>
    <formula>(Total_Price_With_Discount__c  + Total_Tax_Amount__c + Other_Charges__c   +   Freight_INR__c  +  Freight_Tax_Amount__c) +  (Tax_Code_For_Merchant__r.Rate__c) * (Total_Price_With_Discount__c  + Total_Tax_Amount__c + Other_Charges__c   +   Freight_INR__c  +  Freight_Tax_Amount__c) +  FREIGHT_AND_INSURANCE__c +  UNLOADING_CHARGES__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price With Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>