force-app/force-app/force-app/main/default/objects/Order/fields/UNLOADING_CHARGES__c.field-meta.xml
<CustomField>
    <fullName>UNLOADING_CHARGES__c</fullName>
    <defaultValue>0</defaultValue>
    <label>UNLOADING CHARGES</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>